# praktikum

./: CMakeLists.txt  index.html  params.json
doc/: Doxyfile.cmake
doc/bericht/: Bericht.aux  Bericht.out  Bericht.tex
doc/html/: _mainpage_8h_source.html  annotated.html  chinesewhisper_8hpp_source.html  class_g_m-members.html  class_g_m.html  class_g_m_m-members.html  class_g_m_m.html  class_g_m_m__coll__graph.map  class_g_m_m__coll__graph.md5  class_g_m_m_creator-members.html  class_h_m_m-members.html  class_h_m_m.html  class_h_m_m__coll__graph.map  class_h_m_m__coll__graph.md5  class_h_m_m_comp-members.html  class_matrix_transformation_functor-members.html  classes.html  config_8hpp_source.html  datatypes_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  gmm_8hpp_source.html  graph_legend.html  hmm_8hpp_source.html  index.html  kld_8hpp_source.html  kmeans_8hpp_source.html  matrixutilities_8hpp_source.html  pdb__utilities_8hpp_source.html  prettyprint_8hpp_source.html  struct_g_m_m_creator.html  struct_h_m_m_comp.html  struct_k_means_functor-members.html  struct_k_means_functor.html  struct_k_means_functor__coll__graph.map  struct_k_means_functor__coll__graph.md5  struct_k_means_params-members.html  struct_k_means_params.html  (+4 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_73.js  all_74.js  all_76.js  classes_67.js  classes_68.js  classes_6b.js  classes_6d.js  classes_70.js  classes_76.js  functions_62.js  functions_63.js  functions_65.js  functions_66.js  functions_67.js  functions_68.js  functions_69.js  functions_6b.js  functions_6e.js  functions_6f.js  functions_73.js  search.js  variables_61.js  variables_62.js  variables_63.js  variables_6b.js  variables_6e.js  variables_70.js  (+1 more)
examples/: CMakeLists.txt  comparison.cpp  pdb1jdh.ent
examples/data/: pdb1gt0.ent  pdb1i7x.ent  pdb1jpw.ent  pdb1k99.ent
include/: config.hpp  datatypes.hpp  edh.hpp  pdb_utilities.hpp  prettyprint.hpp  utilities.hpp
include/ged/: edh.hpp  kmeans.hpp
include/hmm/: chinesewhisper.hpp  gmm.hpp  hmm.hpp  kld.cpp  kld.hpp  kmeans.hpp
postgresql/graphdb-HEAD-fcff52b/FeatureTemplates/: delta_hmm.backup.xml  delta_hmm.xml  hmm_lib.xml
postgresql/graphdb-HEAD-fcff52b/FeatureTemplates/hmm_lib/: Makefile  hd_gm.c  hd_hmm.c  hmm
postgresql/package/FeatureTemplates/: hmm_lib.xml
postgresql/package/FeatureTemplates/hmm_lib/: Makefile  hd_hmm.c
postgresql/package/FeatureTemplates/hmm_lib/hmm/: chinesewhisper.hpp  gmm.hpp  kld.cpp  kld.hpp
postgresql/package/doc/: README.txt
postgresql/package/doc/bericht/: DEarticle.cls
postgresql/testing/: Makefile  hd_gm.c  hd_hmm.c  hmm.sql
test/: CMakeLists.txt  ged_test.cxx  hmm_test.cxx  pdb_test.cxx
